--- a/src/sample/LoginPage.fxml
+++ b/src/sample/LoginPage.fxml
@@ -14,8 +14,8 @@
       <PasswordField fx:id="loginPassword" layoutX="162.0" layoutY="313.0" promptText="Password" />
       <Button fx:id="loginBTN" layoutX="197.0" layoutY="355.0" mnemonicParsing="false" onAction="#loginAuthenticator" prefHeight="25.0" prefWidth="80.0" text="Login" />
       <Hyperlink fx:id="signUpLink" alignment="CENTER" layoutX="203.0" layoutY="388.0" onAction="#displayCreateAccountPage" prefHeight="25.0" prefWidth="69.0" text="Sign Up!" />
-      <Label alignment="CENTER" layoutX="310.0" layoutY="145.0" prefHeight="25.0" prefWidth="131.0" textFill="RED" />
-      <Label alignment="CENTER" layoutX="310.0" layoutY="170.0" prefHeight="25.0" prefWidth="131.0" textFill="RED" />
-      <ImageView fx:id="loginPic" fitHeight="223.0" fitWidth="230.0" layoutX="122.0" layoutY="34.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="loginUsernameError" alignment="CENTER" layoutX="310.0" layoutY="280.0" prefHeight="25.0" prefWidth="131.0" textFill="RED" />
+      <Label fx:id="loginPasswordError" alignment="CENTER" layoutX="310.0" layoutY="313.0" prefHeight="25.0" prefWidth="131.0" textFill="RED" />
+      <ImageView fx:id="loginPic" fitHeight="223.0" fitWidth="230.0" layoutX="122.0" layoutY="34.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="217.0" AnchorPane.leftAnchor="122.0" AnchorPane.rightAnchor="118.0" AnchorPane.topAnchor="34.0" />
    </children>
 </AnchorPane>
